Implement dashboard reports and add CostoUnitario to DetalleFactura

--- a/SistemaFacturacionSRI.BlazorApp/Components/_Imports.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using SistemaFacturacionSRI.BlazorApp
 @using SistemaFacturacionSRI.BlazorApp.Components
+@using ApexCharts
