--- a/SistemaFacturacionSRI.BlazorApp/Components/App.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/App.razor
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="SistemaFacturacionSRI.BlazorApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveServer" />
+
+    <script src="_content/Blazor-ApexCharts/js/apex-charts.min.js"></script>
+    <script src="_content/Blazor-ApexCharts/js/blazor-apex-charts.js"></script>
+
 </head>
 
 <body>
