--- a/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/Layout/NavMenu.razor
@@ -60,6 +60,8 @@
             </Authorized>
         </AuthorizeView>
 
+
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3 border-top pt-3 mt-3">
@@ -69,6 +71,18 @@
                 </div>
             </Authorized>
         </AuthorizeView>
+
+
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="reportes">
+                        <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> Reportes
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
 
         <AuthorizeView Roles="Administrador">
             <Authorized>
